plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group 'webapp-hardware-bridge'
version '1.0-SNAPSHOT'

sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    // The production code uses the SLF4J logging API at compile time
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.23.1'

    implementation group: 'commons-io', name: 'commons-io', version: '2.16.1'
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.17.0'
    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.2.4'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    implementation group: 'com.fazecast', name: 'jSerialComm', version: '2.11.0'
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.31'
    implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.78.1'
    implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: '1.78.1'
    implementation group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.5.6'
    implementation group: 'org.kordamp.bootstrapfx', name: 'bootstrapfx-core', version: '0.4.0'

    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
}